--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,14 +1,25 @@
-<h1>Mr Cocktails</h1>
+<h1 class="banner">Mr Cocktails</h1>
 
+<div class="d-flex align-content-stretch">
   <% @cocktails.each do |cocktail| %>
-<div class="card">
-  <h3><%= link_to cocktail.name, cocktail_path(cocktail) %></h3>
-      <% cocktail.doses.each do |dose| %>
-      <p><%= dose.ingredient.name %></p>
-  <% end %>
+    <div class="paddingBlock">
+      <div class="card mb-3" style="max-width: 18rem;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="..." class="card-img" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to cocktail.name, cocktail_path(cocktail) %></h5>
+              <% cocktail.doses.each do |dose| %>
+                <p class="card-text"><%= dose.ingredient.name %></p>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
 
 <p><%= link_to "Create new cocktail", new_cocktail_path %></p>
-
-
