--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,25 +1,21 @@
-<h1 class="banner">Mr Cocktails</h1>
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://v9ff1rk5yyrm72m39ffkajwj-wpengine.netdna-ssl.com/wp-content/uploads/2013/07/happy-hour.jpg)">
+  <h1 class="banner">Mr Cocktails</h1>
+</div>
 
-<div class="d-flex align-content-stretch">
+<%= link_to "Create new cocktail", new_cocktail_path, class: "btn btn-primary"  %>
+
+
+
+<div class="container">
   <% @cocktails.each do |cocktail| %>
-    <div class="paddingBlock">
-      <div class="card mb-3" style="max-width: 18rem;">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src="..." class="card-img" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title"><%= link_to cocktail.name, cocktail_path(cocktail) %></h5>
-              <% cocktail.doses.each do |dose| %>
-                <p class="card-text"><%= dose.ingredient.name %></p>
-              <% end %>
-            </div>
-          </div>
-        </div>
+    <div class="card" style="width: 18rem;">
+      <%= cl_image_tag cocktail.photo,class: "card-img-top"%>
+      <div class="card-body">
+        <h5 class="card-title"><%= link_to cocktail.name, cocktail_path(cocktail) %></h5>
+        <% cocktail.doses.each do |dose| %>
+          <p class="card-text"><%= dose.ingredient.name %></p>
+        <% end %>
       </div>
     </div>
   <% end %>
 </div>
-
-<p><%= link_to "Create new cocktail", new_cocktail_path %></p>
