--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,8 +1,9 @@
 <h1><%= @cocktail.name %></h1>
 
 <ul>
+  <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
   <% @cocktail.doses.each do |dose| %>
-  <li><%= dose.ingredient.name %></li>
+  <li><%= dose.description %> <%= dose.ingredient.name %></li>
   <% end %>
 </ul>
 
